# heybabb

./: README.md  install.sh  pyproject.toml
babb/: cli.py  knowledge.py  responses.py
babb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
babb/commands/: ask.py  sync.py  vision.py
heybabb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
