[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heybabb"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.25",
    "requests>=2.31",
]

[project.scripts]
heybabb = "babb.cli:app"

[tool.setuptools.packages.find]
where = ["."]
